# cube_pick_place

./: CMakeLists.txt  package.xml
config/: crustcrawler_grasp_data.yaml
launch/: crustcrawler_pick_place.launch  cube_pick_place.launch  cube_pos_pub.launch  pick_and_place_baxter_python.launch  pick_and_place_crustcrawler_python.launch  pick_and_place_pr2_python.launch  pick_and_place_python.launch  test_crustcrawler_pick_place.launch
launch/params/: parameters.yaml  parameters_crustcrawler.yaml  planner_params.yml
msg/: pick_place_pose.msg
params/: experiment_settings.yml  global_params.yml
src/: baxter_pick_place.cpp  crustcrawler_pick_place.cpp  cube_pick_place.cpp  cube_pos_pub.cpp  get_rpy.cpp  pick_and_place_baxter_python.cpp  pick_and_place_crustcrawler_python.cpp  pick_and_place_pose.cpp  pick_and_place_pr2_python.cpp  pick_and_place_python.cpp  test_crustcrawler_pick_place.cpp
